# rogue_like

./: Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  main.cpp
GUI/: PauseMenuState.cpp  PauseMenuState.h
Tile/: Tile.cpp  Tile.h
components/: AnimationComponent.cpp  AnimationComponent.h  HitBoxComponent.cpp  HitBoxComponent.h  MovementComponent.cpp  MovementComponent.h
config/: window.ini
entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
resources/sprites/player/: animations.xcf
states/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
